# mecanum_in_gazebo

./: CMakeLists.txt  LICENSE  package.xml
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
urdf/: materials.xacro  mec_rob.xacro
